v0.16
    * CHG : Change way the virtual nodes are handled
    * CHG : Allow tag pasting between different classes of features
    * CHG : Use a different spatial index provider
    * ADD : Allow to delete features from the context menu of the Features dock
    * ADD : Accept mlon/mlat URLs as emitted by mkgmap logging
    * ADD : Walking Papers backgound plugin + load WP scans as geotagged images
    * ADD : Import from OSC (osmChange format)
    * ADD : Feature-Force Delete action (deletes the feature without entry in the undo nor upload list)
    * CHG : Switch to transactional diff uploads to OSM to harden the process
	* ADD : Export to OSC (osmChange format)
    * ADD : CSV POI import
    * FIX : crash when closing layer with virtual nodes (fixes #2858)
    * ADD : OSGB36 to the default list of projections
    * CHG : Allow to add images to a GeoTIFF layer
    * ADD : Add SHP feature attributes as not uploadable OSM Feature tags
    * FIX : Allow to load OS VectorMap District shapefiles
    * ADD : Allow to save geotagged images
    * CHG : Enhanced support for geotagged images drag&drop
    * CHG : Geotag support enhancements
    * FIX : use gpsd api and implement gpsd-ng
    * FIX : Do not take closed layers into account when choosing photo layer (fixes #2823)
    * ADD : show geotagged photos on the map (disable via 'view-Show Photos on map')
    * FIX : crash when closing layers containing photos (fixes #2828)
    * CHG : Allow importing geotagged photos when no track layer is present (closes #2827)
    * ADD : Templates xsd (by Jonathan Bennett) (closes #2809; closes #2707)	
    * ADD : allow to re-order relation members (closes #2759)
    * FIX : solves a problem when hovering large relations
    * ADD : add a projection editor 
    * ADD : allow google maps links in goto and download dialogs
    * FIX : abort tile downloading when zooming
    * ADD : Allow to tile (and cache) arbitrary WMS'es (only EPSG:4326 and google projection supported)